# HealthcareCostNavigator

./: .gitignore  ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml  run_tests.py  sample_queries.md
app/: __init__.py  config.py  etl.py  main.py
app/api/: __init__.py  ai.py  providers.py
app/db/: __init__.py  base.py  session.py
app/models/: __init__.py  base.py  hospital.py  procedure.py  rating.py
app/services/: __init__.py  ai_service.py  provider_service.py
frontend/: .dockerignore  .gitignore  Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  types.ts
tests/: __init__.py  test_api.py
